finalproject/force-app/main/default/objects/Residence__c/Residence__c.object-meta.xml
<CustomObject>
    <description>Place where Doctor can hold Appointments</description>
    <label>Residence</label>
    <nameField>
        <label>Residence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Residence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>