finalproject/force-app/main/default/objects/Residence__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <length>64</length>
    <type>Text</type>
</CustomField>