finalproject/force-app/main/default/objects/Residence__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <formula>Street_Address__c &amp; &quot; &quot; &amp; City__c &amp; &quot; &quot; &amp; State__c &amp; &quot; &quot; &amp; Country__c &amp; &quot; &quot; &amp; TEXT( Postal_Code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>