finalproject/force-app/main/default/objects/Residence__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <label>Street Address</label>
    <length>64</length>
    <type>Text</type>
</CustomField>